<resources>
    <string name="app_name">MDROID</string>
    <string name="e_mail_home">E-mail:</string>
    <string name="nome_de_usuario_home">User name:</string>
    <string name="insira_sua_senha_home">Enter password:</string>
    <string name="clique_aqui_home">Login</string>
    <string name="switch_login_home">Keep connected</string>
    <string name="button_login_msg_error">Error login please try again</string>
    <string name="Cadastrar_home">Register here</string>
    <string name="sucesso_login">Login success</string>
    <string name="cadastre_sua_senha_home">Password</string>
    <string name="cadastro_idd">Age</string>
    <string name="cadastro_celular">Phone</string>
    <string name="enviar">Enviar</string>
    <string name="cadastro_msg_preencher">Some fields have not been filled in yet</string>
    <string name="cadastro_sucesso">Success to register</string>
</resources>