<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB0133"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-48dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/but_text_login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="#0E0D0D"
        android:backgroundTint="#0E0D0D"
        android:foregroundTint="#0E0D0D"
        android:shadowColor="#0E0D0D"
        android:text="@string/clique_aqui_home"
        android:textColorHighlight="#0E0D0D"
        android:textStyle="normal|bold"
        app:iconTint="#0E0D0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906"
        app:rippleColor="#0E0D0D"
        app:strokeColor="#0E0D0D"
        tools:visibility="visible" />

    <Button
        android:id="@+id/but_text_login2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:background="#0E0D0D"
        android:backgroundTint="#0E0D0D"
        android:fontFamily="sans-serif"
        android:foregroundTint="#0E0D0D"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:shadowColor="#0E0D0D"
        android:text="@string/Cadastrar_home"
        android:textAlignment="center"
        android:textColorHighlight="#0E0D0D"
        android:textSize="10dp"
        android:textStyle="normal"
        app:iconTint="#0E0D0D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_text_login"
        app:rippleColor="#0E0D0D"
        app:strokeColor="#0E0D0D"
        tools:visibility="visible" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00C50000"
        android:backgroundTint="#C50000"
        android:drawableTint="#C50000"
        android:foregroundTint="#C50000"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/switch_login_home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHighlight="#C50000"
        android:textColorLink="#C50000"
        android:textOff="OFF"
        android:textOn="ON"
        android:textSize="12sp"
        android:textStyle="bold"
        android:thumbTint="#0E0D0D"
        android:trackTint="#121111"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/e_mail_home"
        android:textAlignment="center"

        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/insira_sua_senha_home"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="@color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableTint="@color/white"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/nome_de_usuario_home"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957" />

</androidx.constraintlayout.widget.ConstraintLayout>
